--- a/app/views/members/contacts/new.html.erb
+++ b/app/views/members/contacts/new.html.erb
@@ -1,2 +1,31 @@
-<h1>Members::Contacts#new</h1>
-<p>Find me in app/views/members/contacts/new.html.erb</p>
+<div class="container-fluid">
+  <div class="col-5 mx-auto">
+    <h2>お問い合わせフォーム</h2>
+  </div>
+  <div class="row m-5">
+    <div class="col-2">
+      <h2>menu</h2>
+      <%= attachment_image_tag current_member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "100x100"%>
+    </div>
+    <div class="col-10">
+      <%= link_to '履歴を見る', contacts_path, class: 'btn btn-outline-primary' %>
+      <div class="mt-5">
+      <%= form_with model: @contact, url: contacts_confirm_path, local: true, method: :post  do |f| %>
+        <div class="form-group">
+          <%= f.label :title, 'タイトル*' %>
+          <%= f.text_field :title, autofocus: true, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :message, 'メッセージ*' %>
+          <%= f.text_area :message, size: '10x10', class: 'form-control' %>
+        </div>
+
+        <div>
+          <%= f.submit '入力内容確認', class: "btn btn-info" %>
+        </div>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div>
