--- a/app/views/layouts/_information.html.erb
+++ b/app/views/layouts/_information.html.erb
@@ -36,7 +36,7 @@
   </tr>
   <tr>
     <th>出演者情報</th>
-    <th><%= program.cast %></th>
+    <th><%= program.talent %></th>
   </tr>
   <th>放送局</th>
     <th><%= program.channel %></th>
