--- a/app/views/admins/programs/edit.html.erb
+++ b/app/views/admins/programs/edit.html.erb
@@ -38,7 +38,7 @@
             <%= f.label "出演者情報", class: "form-group-label" %>
           </div>
           <div class="col-md-7">
-            <%= f.text_field :cast, autofocus: true, autocomplete: "cast", class: "form-control" %>
+            <%= f.text_field :talent, autofocus: true, autocomplete: "talent", class: "form-control" %>
           </div>
       　</div>
 
