--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -44,7 +44,7 @@
             </th>
             <th>
               <p><%= program.updated_at.strftime("%Y-%m-%d %H:%M") %></p>
-              <p><%= time_ago_in_words(program.created_at) %>前</p>
+              <p><%= time_ago_in_words(program.updated_at) %>前</p>
             </th>
           </tr>
           <% end %>
