--- a/app/views/members/registrations/new.html.erb
+++ b/app/views/members/registrations/new.html.erb
@@ -12,10 +12,10 @@
       <div class="col-md-7">
         <div style="display:inline-flex">
           <div>
-            <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control", placeholder: "田中" %>
+            <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control", placeholder: "田中" %>
           </div>
           <div class="mx-3">
-            <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control", placeholder: "太郎" %>
+            <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control", placeholder: "太郎" %>
           </div>
         </div>
       </div>
