--- a/app/views/members/program_notifications/_notification.html.erb
+++ b/app/views/members/program_notifications/_notification.html.erb
@@ -1,4 +1,4 @@
-<% @program.each do |program| %>
-  <p>本日は<%= program.title %>が
-  <%= program.start_datetime %>より放送します</p>
+<% @notifications.each do |notification| %>
+  <p>本日は<%= notification.program.title %>が
+  <%= notification.program.start_datetime %>より放送します</p>
 <% end %>
