--- a/app/views/members/program_notifications/index.html.erb
+++ b/app/views/members/program_notifications/index.html.erb
@@ -1,7 +1,7 @@
-<% notifications = @notifications.where.not(visitor_id: current_user.id) %>
-<% if notifications.exists? %>
+<% notifications = @notifications %>
+<% if notifications != nil && notifications.count > 0 %>
   <%= render 'members/program_notifications/notification' %>
-  <%= paginate notifications %>
+  <%#= paginate notifications %>
 <% else %>
   <p>通知はありません</p>
 <% end %>
