--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -7,9 +7,10 @@
         <thead>
           <tr>
             <th class="col-2">放送状況</th>
-            <th class="col-3">番組名</th>
-            <th class="col-2">放送局</th>
+            <th class="col-2">番組名</th>
+            <th class="col-1">放送局</th>
             <th class="col-3">放送日時</th>
+            <th class="col-2">カテゴリー</th>
             <th class="col-1">👍</th>
             <th class="col-1">レビュー</th>
           </tr>
@@ -36,6 +37,9 @@
               <% weeks = ["月","火","水","木","金","土","日"] %>
               <% index = program.start_datetime.strftime("%u").to_i %>
               <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %>
+            </th>
+            <th>
+              <%= program.category %>
             </th>
             <th>
               <%#= render partial: 'members/favorites/favorite', locals: { program: program, member: @member } %>
