--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -3,11 +3,10 @@
     <div class="col-3">
       <div class="btn btn-outline-info">番組一覧を表示する</div><br>
       <%= link_to '番組情報を更新する', admins_scrape_path, class: 'btn btn-outline-danger' %>
-      <%#= link_to "番組情報を取得する", '#', id: 'display-program-list' %>
-      <%#= link_to "番組情報を取得する", admins_scrape_path, remote: true, id: 'get-data', style: 'display:none;' %>
     </div>
     <div class="col-9">
       <h4>番組一覧</h4>
+      <%= link_to "新しい順", admins_programs_path(sort: 'created_at DESC') %> | <%= link_to "評価の高い順", admins_programs_path(sort: 'score DESC') %>
       <p>😲<%= @time.strftime("%-H:%M") %>の情報です</p>
       <table class="table program">
         <thead>
@@ -17,6 +16,7 @@
             <th>放送局</th>
             <th>放送日時</th>
             <th>最終更新</th>
+            <th>評価</th>
           </tr>
         </thead>
         <tbody>
@@ -46,12 +46,15 @@
               <p><%= program.updated_at.strftime("%Y-%m-%d %H:%M") %></p>
               <p><%= time_ago_in_words(program.updated_at) %>前</p>
             </th>
+            <th>
+              <%= program.review %>
+            </th>
           </tr>
           <% end %>
         </tboby>
       </table>
       <div class="">
-      <%= paginate @programs %>
+      <%#= paginate @programs %>
       </div>
     </div>
   </div>
