--- a/app/views/members/contacts/confirm.html.erb
+++ b/app/views/members/contacts/confirm.html.erb
@@ -4,15 +4,14 @@
   </div>
   <div class="row m-5">
     <div class="col-2">
-      <h2>menu</h2>
-      <%= attachment_image_tag current_member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "100x100"%>
+      <%= render 'members/members/mymenu' %>
     </div>
-    <div class="col-10">
+    <div class="col-6 mx-auto">
       <table>
         <tbody>
           <tr>
-            <td class="text-center" style="width: 30%;">お名前</td>
-            <td>
+            <td class="text-center">お名前</td>
+            <td style="white-space: pre-wrap;">
               <%= current_member.nickname %> 様
             </td>
           </tr>
@@ -32,19 +31,19 @@
       </table>
       <div class="row">
         <div class="col-2">
-        <%= form_with model: @contact, url: contacts_path, local: true, method: :post do |f| %>
-          <%= f.hidden_field :title %>
-          <%= f.hidden_field :message %>
-          <%= f.submit '送信', class: 'btn btn-info'%>
-        <% end %>
+          <%= form_with model: @contact, url: contacts_back_path, local: true, method: :post do |f| %>
+            <%= f.hidden_field :title %>
+            <%= f.hidden_field :message %>
+            <%= f.submit '入力画面に戻る', class: 'btn btn-danger' %>
+          <% end %>
         </div>
 
-        <div class="col-2">
-        <%= form_with model: @contact, url: contacts_back_path, local: true, method: :post do |f| %>
-          <%= f.hidden_field :title %>
-          <%= f.hidden_field :message %>
-          <%= f.submit '入力画面に戻る', class: 'btn btn-danger' %>
-        <% end %>
+        <div class="col-2 mx-5">
+          <%= form_with model: @contact, url: contacts_path, local: true, method: :post do |f| %>
+            <%= f.hidden_field :title %>
+            <%= f.hidden_field :message %>
+            <%= f.submit '送信', class: 'btn btn-info'%>
+          <% end %>
         </div>
       </div>
     </div>
