--- a/app/views/members/contacts/index.html.erb
+++ b/app/views/members/contacts/index.html.erb
@@ -4,8 +4,7 @@
   </div>
   <div class="row m-5">
     <div class="col-2">
-      <h2>menu</h2>
-      <%= attachment_image_tag current_member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "100x100"%>
+      <%= render 'members/members/mymenu' %>
     </div>
     <div class="col-10">
       <table class="table">
