--- a/app/views/members/members/edit.html.erb
+++ b/app/views/members/members/edit.html.erb
@@ -1,10 +1,12 @@
-<div class="container m-5">
-  <div class="row justify-content-center">
+<div class="container-fluid">
+  <div class="col-5 mx-auto">
+    <h2>プロフィール更新</h2>
+  </div>
+  <div class="row m-5">
     <div class="col-2">
-      <%= link_to "マイページへ戻る", my_page_path, class: "btn btn-info" %>
+      <%= render 'members/members/mymenu' %>
     </div>
-    <div class="col-10 mx-auto">
-      <h4>会員情報更新</h4>
+    <div class="col-8 mx-auto">
       <%= form_with model: current_member, url:member_path, local: true, method: :put do |f| %>
       <div class="form-group row">
         <div class="col-md-3">
@@ -76,11 +78,11 @@
 
       <div class="form-group row">
         <div class="col-md-3 d-flex align-items-center">
+          <%= f.label "プロフィール画像", class: "form-group-label" %>
           <%= attachment_image_tag current_member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "100x100"%>
-          <%= f.label "プロフィールイメージ", class: "form-group-label" %>
         </div>
         <div class="col-md-7">
-          <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+            <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
         </div>
       </div>
 
