--- a/app/views/members/members/notification.html.erb
+++ b/app/views/members/members/notification.html.erb
@@ -1,7 +1,7 @@
 <div class="container m-5">
   <div class="row justify-content-center">
     <div class="col-2">
-      <%= link_to "マイページへ戻る", my_page_path, class: "btn btn-info" %>
+      <%= render 'members/members/mymenu' %>
     </div>
     <div class="col-10 mx-auto">
       <h1>通知設定</h1>
