--- a/app/views/members/members/_mymenu.html.erb
+++ b/app/views/members/members/_mymenu.html.erb
@@ -16,12 +16,6 @@
 		  <li>
 		    <%= link_to "お問い合わせ", new_contact_path %>
 		  </li>
-	    <% if unchecked_notifications.any? %>
-		    <i class="fa fa-circle" style="color: gold;"></i>
-		  <% end %>
-		  <li>
-		    <%= link_to "お知らせ", program_notifications_path, method: :get %>
-		  </li>
 		  <li>
 		    <%= link_to "プロフィール変更", my_page_edit_path %>
 		  </li>
@@ -30,6 +24,12 @@
 		  </li>
 		  <li>
 		    <%= link_to "ログアウト", destroy_member_session_path, method: :delete %>
+		  </li>
+		   <% if current_member.favorites.where(checked: false).any? %>
+			    <div class="mymenu_notification"></dev>
+			  <% end %>
+		  <li>
+		    <%= link_to "お知らせ", program_notifications_path, method: :get %>
 		  </li>
 		</ul>
   </div>
