--- a/app/views/members/program_notifications/index.html.erb
+++ b/app/views/members/program_notifications/index.html.erb
@@ -8,9 +8,9 @@
     </div>
     <div class="col-8 mx-auto">
       <div>
-        <% notifications = @notifications %>
-        <% if notifications != nil && notifications.count > 0 %>
-          <%= render 'members/program_notifications/notification' %>
+     
+        <% if @programs != nil &&  @programs.count > 0 %>
+          <%= render 'members/program_notifications/notification',  programs:  @programs %>
         <% else %>
           <p>通知はありません</p>
         <% end %>
