--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -45,7 +45,7 @@
               <%= render partial: 'members/favorites/favorite', locals: { program: program, member: @member } %>
             </th>
             <th>
-              <%= program.review.count %>
+              <%= program.reviews.count %>
             </th>
           </tr>
           <% end %>
