--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -16,11 +16,13 @@
             <th>放送局</th>
             <th>放送日時</th>
             <th>最終更新</th>
-            <th>評価</th>
+            <th>平均評価</th>
+            <th>いいね数</th>
+            <th>PV数</th>
           </tr>
         </thead>
         <tbody>
-        <% @programs.each do |program| %>
+        <% @programs.includes(:reviews).each do |program| %>
           <tr>
             <th>
               <% if Time.zone.now <= program.start_datetime %>
@@ -47,14 +49,17 @@
               <p><%= time_ago_in_words(program.updated_at) %>前</p>
             </th>
             <th>
-              <%= program.review %>
+              <%= program.average_score %>
+            </th>
+            <th>
+              <%= program.favorites.count %>
             </th>
           </tr>
           <% end %>
         </tboby>
       </table>
       <div class="">
-      <%#= paginate @programs %>
+      <%= paginate @programs %>
       </div>
     </div>
   </div>
