--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,14 +1,15 @@
 <div class="conteiner m-5">
   <div class="row mt-4">
-    <div class="col-3">
+    <div class="col-2">
+      <%= render partial: 'admins/homes/admin_menu' %>
     </div>
-    <div class="col-9">
+    <div class="col-10">
       <h4>会員一覧</h4>
       <table class="table program">
         <thead>
           <tr>
             <th></th>
-            <th>氏名</th>
+            <th>氏名(ニックネーム)</th>
             <th>フリガナ</th>
             <th>出身地</th>
             <th>いいねクリック数</th>
@@ -27,16 +28,16 @@
               <% end %>
             </th>
             <th class="align-middle">
-              <%= member.kana_mei + member.kana_sei %>
+              <%= member.kana_sei + member.kana_mei %>
             </th>
             <th class="align-middle">
               <%= member.prefecture %>
             </th>
             <th class="align-middle">
-              <%#= member.favorite.count %>3いいね
+              <%= member.favorites.count %>いいね
             </th>
             <th class="align-middle">
-              <%#= member.acssece.cout <%>23回/月
+              <%= member.sign_in_count %>回
             </th>
           </tr>
           <% end %>
