--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -6,60 +6,13 @@
     </div>
     <div class="col-9">
       <h4>番組一覧</h4>
-      <%= link_to "新しい順", admins_programs_path(sort: 'created_at DESC') %> | <%= link_to "評価の高い順", admins_programs_path(sort: 'score DESC') %>
+      <%= form_with model: @program, url:programs_path, remote: true do |f| %>
+      <%= f.select :sort, [ ['新着順', 'new'], ['これからの放送順', 'start_datetime'], ['いいねが多い順', 'favorite'], ['評価が高い順', 'review'] ], class: "form-select" %>
+      <%= f.submit %>
+      <% end %>
       <p>😲<%= @time.strftime("%-H:%M") %>の情報です</p>
-      <table class="table program">
-        <thead>
-          <tr>
-            <th>放送状況</th>
-            <th>番組名</th>
-            <th>放送局</th>
-            <th>放送日時</th>
-            <th>最終更新</th>
-            <th>平均評価</th>
-            <th>いいね数</th>
-            <th>PV数</th>
-          </tr>
-        </thead>
-        <tbody>
-        <% @programs.includes(:reviews).each do |program| %>
-          <tr>
-            <th>
-              <% if Time.zone.now <= program.start_datetime %>
-                <%= "放送予定" %>
-              <% elsif Time.zone.now.between?(program.start_datetime, program.end_datetime) %>
-              　<%= "放送中" %>
-              <% elsif program.end_datetime <= Time.zone.now %>
-              　<%= "放送終了" %>
-              <% end %>
-            </th>
-            <th>
-              <%= link_to program.title, admins_program_path(program) %>
-            </th>
-            <th>
-              <%= program.channel %>
-            </th>
-            <th>
-              <% weeks = ["月","火","水","木","金","土","日"] %>
-              <% index = program.start_datetime.strftime("%u").to_i %>
-              <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %>
-            </th>
-            <th>
-              <p><%= program.updated_at.strftime("%Y-%m-%d %H:%M") %></p>
-              <p><%= time_ago_in_words(program.updated_at) %>前</p>
-            </th>
-            <th>
-              <%= program.average_score %>
-            </th>
-            <th>
-              <%= program.favorites.count %>
-            </th>
-          </tr>
-          <% end %>
-        </tboby>
-      </table>
-      <div class="">
-      <%= paginate @programs %>
+      <div id="programs_area">
+        <%= render partial: 'admins/programs/index', locals: { programs: @programs } %>
       </div>
     </div>
   </div>
