--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -4,13 +4,8 @@
       <%= render partial: 'admins/homes/admin_menu' %>
     </div>
     <div class="col-10">
-      <h2>各統計</h2>
+      <h2>管理者toppage</h2>
       <div>
-        アクセス数：<%= @accesses %>
-        いいね数：<%= @favorites %>
-        レビュー件数：<%= @reviews %>
-        PV数：<%= @view_counts %>
       </div>
     </div>
   </div>
-<>
