--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container-fluid">
   <div class="row m-4">
-    <div class="col-3">
+    <div class="col-2">
+      <%= render partial: 'admins/homes/admin_menu' %>
     </div>
-    <div class="col-8">
+    <div class="col-8 mx-auto">
+      <h2>お問合せ内容一覧</h2>
       <table class="table program">
         <thead>
           <tr>
@@ -14,8 +16,7 @@
           </tr>
         </thead>
         <tbody>
-        <% @members.each do |member| %>
-            <% member.contacts.each do |contact| %>
+            <% @contacts.each do |contact| %>
               <tr>
                 <th>
                   <%= contact.created_at.strftime("%Y年%m月%d日 ") %>
@@ -33,10 +34,9 @@
                   <%= contact.message %>
                 </th>
               </tr>
-            <% end %>
           <% end %>
-        </tboby>
-        <%= paginate @contacts %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
