--- a/app/views/admins/homes/_admin_menu.html.erb
+++ b/app/views/admins/homes/_admin_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="tab-area">
   <ul class="tab">
-		<li class="active"><a href="#use">MENU</a></li>
+		<li class="active"><a href="#use">管理者MENU</a></li>
 	</ul>
 	<div id="use" class="area is-active">
 		<ul>
@@ -16,6 +16,9 @@
 		  <li>
 		    <%= link_to "会員検索", admins_search_path %>
 		  </li>
+		  <% if @unchecked_notifications.any? %>
+        <span style="background-color: gold;width:10px;height:10px;top:14px;left:10px;position:absolute;border-radius:50%;"></span>
+      <% end %>
 		  <li>
 		    <%= link_to "お問合せ一覧", admins_contacts_path %>
 		  </li>
