--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -43,7 +43,7 @@
               <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %>
             </th>
             <th>
-              <%= program.category %>
+              <%= program.category.split(' ') %>
             </th>
             <th>
               <%= render partial: 'members/favorites/favorite', locals: { program: program, member: @member } %>
