--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -7,54 +7,7 @@
     <div class="col-10">
       <h4>番組一覧</h4>
       <p>😲<%= @time.strftime("%-H:%M") %>の情報です</p>
-      <table class="table program">
-        <thead>
-          <tr>
-            <th class="col-2">放送状況</th>
-            <th class="col-2">番組名</th>
-            <th class="col-1">放送局</th>
-            <th class="col-3">放送日時</th>
-            <th class="col-2">カテゴリー</th>
-            <th class="col-1">💖</th>
-            <th class="col-1">レビュー</th>
-          </tr>
-        </thead>
-        <tbody>
-        <% @programs.each do |program| %>
-          <tr>
-            <th>
-              <% if Time.zone.now <= program.start_datetime %>
-                <%= "放送予定" %>
-              <% elsif Time.zone.now.between?(program.start_datetime, program.end_datetime) %>
-              　<%= "放送中" %>
-              <% elsif program.end_datetime <= Time.zone.now %>
-              　<%= "放送終了" %>
-              <% end %>
-            </th>
-            <th>
-              <%= link_to program.title, program_path(program) %>
-            </th>
-            <th>
-              <%= program.channel %>
-            </th>
-            <th>
-              <% weeks = ["月","火","水","木","金","土","日"] %>
-              <% index = program.start_datetime.strftime("%u").to_i %>
-              <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %>
-            </th>
-            <th>
-              <%= program.category.split(' ') %>
-            </th>
-            <th>
-              <%= render partial: 'members/favorites/favorite', locals: { program: program, member: @member } %>
-            </th>
-            <th>
-              <%= program.reviews.count %>
-            </th>
-          </tr>
-          <% end %>
-        </tboby>
-      </table>
+      <%= render partial: 'members/programs/index', locals: { programs: @programs, member: @member } %>
       <%= paginate @programs %>
     </div>
   </div>
